<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_inbox"
            android:icon="@drawable/ic_inbox"
            android:title="@string/menu_inbox" />
        <item
            android:id="@+id/nav_available"
            android:icon="@drawable/ic_available"
            android:title="@string/menu_available" />
        <item
            android:id="@+id/nav_approved"
            android:icon="@drawable/ic_approve"
            android:title="@string/menu_approved" />

        <item
            android:id="@+id/nav_pending"
            android:icon="@drawable/ic_pending"
            android:title="@string/menu_pending" />

        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_settings"
            android:title="@string/action_settings" />


        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit"
            android:iconTint="@android:color/white"
            android:title="Sign Out" />
    </group>
</menu>
